# ntu-beyond-binary

./: .env  .gitignore  ARCHITECTURE.drawio  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  DISTRIBUTION.md  QUICK_START.md  README.md  README_DESKTOP_AGENT.md  SPEECH_SERVICE_README.md  TROUBLESHOOTING_BUILD.md  agent.py  build-all.bat  build-all.sh  build-backend-only.bat  desktop_agent.py  desktop_agent.ts  env.example  main.py  package-lock.json  package.json  pyproject.toml  quick-start.bat  quick-start.sh  requirements-agent.txt  requirements-speech.txt  setup.bat  setup.sh  speech_service.py  start-frontend.bat  start-frontend.sh
backend/: .gitignore  README.md  build_executable.py  env.example  pyproject.toml  requirements.txt  start_server.bat  start_server.sh
backend/src/: agent_interface.py  main.py  server.py
backend/src/storage/: __init__.py  calibrations.py  gestures.py  profiles.py
backend/src/translate/draw/: __init__.py  gesture_db.py  gesture_recognizer.py
backend/src/translate/eye_gaze/: __init__.py  calibration.py  gaze_tracker.py
backend/src/translate/facial/: __init__.py  expression_detector.py
backend/src/translate/haptic/: __init__.py  take_haptic_input.py
backend/src/translate/head/: __init__.py  head_tracker.py
backend/src/translate/sign/: __init__.py  custom_signs.py  live_sign_asl_hf_demo.py  live_sign_asl_ml_demo.py  live_sign_demo.py  take_sign_input.py
backend/src/translate/sip_puff/: __init__.py  breath_detector.py
backend/src/translate/text/: __init__.py  take_text_input.py
backend/src/translate/voice/: __init__.py  (+1 more)
(+49 files in other folders)
